fix blurry fonts. remove transform on content

--- a/website/source/stylesheets/_footer.less
+++ b/website/source/stylesheets/_footer.less
@@ -13,14 +13,6 @@ body.page-home{
 #footer{
     padding: 140px 0 40px;
     color: black;
-    background-color: white;
-    .skew {
-        .skewY(-2deg);
-    }
-
-    >.container.skew{
-        .skewY(2deg);
-    }
 
     a{
         color: black;
